styles.css
body {
    margin: 0;

    display: grid;
    grid-template-columns: 300px 1fr;

    height: 100vh;

    background-color: rgb(235, 241, 255);

    font-family:'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

button {
    transition-duration: 0.4s;
}

button:hover {
    background-color: lightskyblue; /* Green */
    color: white;
    cursor: pointer;
}
#search-button:hover {
    background-color: lightskyblue; /* Green */
    color: white;
    cursor: pointer;
}
#mini-profile:hover {
    background-color: lightskyblue; /* Green */
    color: white;
    cursor: pointer;
}
#notification-button:hover {
    background-color: lightskyblue; /* Green */
    color: white;
    cursor: pointer;
}

button:active {
    background-color: white;
}

#search-bar input:focus {
    outline: none;
    border: 2px solid lightskyblue;
}

.action-button:hover {
    background-color: lightskyblue;
    color: white;
}

#sidebar-container {
    background-color: rgb(30, 144, 214);

    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 3;
}

#sidebar {
    display: grid;
    grid-template-columns: 1fr;

    gap: 15px;
}

#logo {
    display: grid;
    grid-template-columns: 55px 4fr;

    gap: 10px;

    margin-bottom: 20px;
    margin-top: 20px;

    background-color: rgb(30, 144, 214);
    border: 0;
    padding-left: 20px;
}

#logo-title {
    display: grid;
    align-items: center;

    text-align: left;
    font-weight: bold;
    font-size: 2.25em;

    color: white;
}

#logo-icon {
    display: grid;
    align-items: center;
}

.sidebar-option {
    display: grid;
    grid-template-columns: 30px 1fr;

    gap: 25px;

    background-color: rgb(30, 144, 214);
    border: 0;
    margin: 0;
    padding-left: 30px;
    padding-top: 3px;
    padding-bottom: 3px;
}

.sidebar-option:nth-child(8) {
    margin-top: 50px;
}

.sidebar-icon {
    display: grid;
    align-items: center;
}

.sidebar-title {
    display: grid;
    align-items: center;

    text-align: left;
    font-weight: bold;
    font-size: 1.5em;

    color: white;
}

#header {
    grid-column-start: 2;
    grid-column-end: 3; 

    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1.5fr;


    height: 150px;
    background-color: white;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);

    padding-left: 40px;
    padding-right: 40px;
    padding-top: 10px;
}

#header-upper {
    display: grid;
    grid-template-columns: 40px 1fr 40px;

    align-items: center;
}

#search-button {
    width: 40px;
    height: 40px;

    margin: 0;
    padding: 0;
    border: 0;

    background-color: white;

    display: grid;
    align-items: center;
    justify-content: center;

    border-radius: 30px;
}

#search-button img {
    margin: 0;
    padding: 0;
    border: 0;

    width: 25px;
}


.header-icon {
    display: grid;
    place-items: center;
    align-items: center;
}

.header-icon img {
    max-width: 25px;
    height: auto;
}

#notification-button {
    width: 40px;
    height: 40px;

    grid-column-start: -1;
    grid-column-end: -2;

    background-color: white;
    border: 0;
    margin: 0;
    padding: 0;

    border-radius: 30px;
}

#search-bar {
    margin-left: 10px;
    margin-right: 20px;
}

#search-bar input {
    width: 600px;
    height: 25px;

    border: 0;
    padding-left: 10px;
    padding-right: 10px;
    background-color: rgb(235, 241, 255);
    border-radius: 20px;
}

#mini-profile {
    grid-column-start: -1;
    grid-column-end: 6;

    display: grid;
    grid-template-columns: 40px 3fr;

    align-items: center;
    justify-content: center;

    width: 200px;

    background-color: white;
    border: 0;
    margin: 0;
    padding: 5px 10px;

    border-radius: 30px;
}

#mini-profile-avatar {
    display: grid;
    align-items: center;
}

#mini-profile-avatar img {
    width: 45px;
    height: auto;

    border-radius: 100px;
}

#mini-profile-name {
    text-align: left;
    margin-left: 20px;

    font-size: 1.2em;
    font-weight: bold;

    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#header-lower {
    display: grid;
    grid-template-columns: 1fr;
}

#big-profile {
    display: grid;
    grid-template-columns: 60px 3fr;

    gap: 30px;

    align-items: center;
}

#big-profile-avatar img {
    width: 60px;
    height: auto;

    border-radius: 100px;
}

#welcome-text {
    font-weight: bold;
}
#big-profile-name {
    font-weight: bold;
    font-size: 1.5em;
}

#actions {
    grid-column-start: -1;
    grid-column-end: 6;

    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 30px;

    align-items: center;

    width: 330px;

    padding-right: 10px
}

.action-button {
    height: 40px;
    border: 0;
    border-radius: 30px;

    font-size: 0.95em;
    font-weight: 600;

    color: white;
    background-color: rgb(30, 144, 214);
}

#main-contents {
    grid-column-start: 2;
    grid-column-end: 3;

    display: grid;
    grid-template-columns: 1fr 0.3fr;
    grid-template-rows: 350px 1fr;

    gap: 15px;

    height: 100vh;  
}

.section-title {
    font-weight: bold;
    margin-bottom: 15px;
    font-size: 1.25em;
}

#projects-section {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 3;

    margin-left: 20px;
    margin-top: 30px;
}

#projects-section ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    display: grid;
    grid-template-columns: 1fr 1fr;

    gap: 15px;
}

.project-item {
    display: grid;
    grid-template-rows: 1fr 4fr 1fr;

    background-color: white;
    border-radius: 8px;

    padding: 25px;
}

.project-item-title {
    font-weight: bold;
    font-size: 1.15em;
}

.project-item-description {
    overflow: hidden;
    text-overflow: ellipsis;

    color: rgb(100, 100, 100);
}

.project-actions {
    display: grid;
    justify-content: end;

    grid-template-columns: 25px 25px 25px;

    gap: 10px;
}

.project-action-button {
    display: grid;
    align-items: center;
    justify-content: center;

    margin: 0;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 0;
    padding-right: 0;
    border: 0;

    background-color: white;

    border-radius: 30px;
}


.project-action-button img {
    margin: 0;
    padding: 0;
    border: 0;

    width: 18px;
}

#announcements-section {
    grid-column-start: 2;
    grid-column-end: 3;

    margin-top: 30px;
    margin-right: 20px;
}

#announcements-section ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    display: grid;
    grid-template-columns: 1fr;

    gap: 15px;

    background-color: white;
    border-radius: 8px;
    padding: 25px;
}

.announcement-item {
    border-style: solid;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-width: 1px;

    display: grid;
    max-height: 50px;

    padding-bottom: 15px;
}

.announcement-item-title {
    font-weight: bold;

    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    font-size: 0.9em;
}

.announcement-item-description {    
    overflow: hidden;
    text-overflow: ellipsis;

    font-size: 0.8em;
    color: rgb(100, 100, 100);
}

#trending-section {
    grid-column-start: 2;
    grid-column-end: 3;

    margin-right: 20px;
}

#trending-section ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    display: grid;
    grid-template-columns: 1fr;
    gap: 10px;

    background-color: white;
    border-radius: 8px;
    padding: 25px;
}

.trending-item {
    display: grid;
    grid-template-columns: 40px 3fr;

    margin: 0;
    padding: 0;
    border: 0;
}

.trending-item-icon {
    display: grid;
    align-items: center;
}

.trending-item-icon img {
    width: 40px;
    height: auto;

    border-radius: 100px;
}

.trending-item-text {
    display: grid;
    align-items: center;

    margin-left: 20px;
}

.trending-item-name {
    text-align: left;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.trending-item-description {
    text-align: left;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    color: rgb(100, 100, 100);

    font-size: 0.9em;
}

